# Hospital-apointment-api

./: .env  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: config.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  logging_config.py  main.py  middleware.py
app/api/v1/: auth.py  doctors.py  patients.py  router.py  users.py
app/core/: enums.py  security.py
app/models/: __init__.py  base.py  doctor.py  patient.py  token_blacklist.py  user.py
app/repositories/: base.py  doctor_repository.py  patient_repository.py  token_blacklist_repository.py  user_repository.py
app/schemas/: auth.py  common.py  doctor.py  patient.py  user.py
app/services/: auth_service.py  doctor_service.py  patient_service.py  user_service.py
tests/: conftest.py  test_auth.py  test_doctors.py  test_patients.py  test_repositories.py  test_security.py  test_services.py  test_users.py
